--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,15 @@
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "allowJs": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "suppressImplicitAnyIndexErrors": true,
     "declaration": true,
+    "target": "ESnext",
+    "module": "Esnext",
     "preserveSymlinks": true
   },
   "include": ["src/*", "typings.d.ts"],
