--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra",
+  "name": "cra-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,13 +10,15 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-stillness-component": "0.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rimraf dist"
   },
   "eslintConfig": {
     "extends": [
