--- a/packages/react-stillness/package.json
+++ b/packages/react-stillness/package.json
@@ -21,6 +21,7 @@
     "es"
   ],
   "dependencies": {
+    "fast-deep-equal": "^3.1.3",
     "hoist-non-react-statics": "^3.3.2",
     "invariant": "^2.2.4",
     "redux": "^4.1.2"
