--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,20 +1,24 @@
-name: Release Drafter
-uses: release-drafter/release-drafter@v5.19.0
-
+name: Release
 on:
   push:
     branches:
-    - main
-
-categories:
-  - title: '🚀 Features'
-    label:
-      - 'feature'
-      - 'enhancement'
-  - title: '🐛 Bug Fixes'
-    labels:
-      - 'fix'
-      - 'bugfix'
-      - 'bug'
-  - title: '🧰 Maintenance'
-    label: 'chore'
+      - main
+jobs:
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16
+      - name: Install
+        run: yarn
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: npx semantic-release
