--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.1",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^9.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/invariant": "^2.2.35",
     "@types/react": "^17.0.0",
@@ -81,6 +86,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.61.1",
     "rollup-plugin-terser": "^7.0.2",
+    "semantic-release": "^19.0.2",
     "standard-version": "^9.3.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
