--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,10 @@
 name: Release
 
 on:
-  [push, pull_request]:
+  push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
@@ -18,6 +21,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.19.1
+
+      - name: Config git user
+        run: |
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor }}@outlook.com"
 
       - name: Bootstrap lerna
         run: yarn bootstrap
