feat(package/react-stillness-component): adjust the volume to resolve all typescript type errors
affects: react-stillness-component

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "module": "ESNext",
     "typeRoots": ["./node_modules/@types"],
     "preserveSymlinks": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "strictPropertyInitialization": false
   },
   "include": ["packages/**/*"],
   "exclude": [
