--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.61.1",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.6.0",
     "standard-version": "^9.3.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
