--- a/packages/react-stillness/package.json
+++ b/packages/react-stillness/package.json
@@ -9,10 +9,11 @@
   "main": "dist/index.js",
   "module": "es/index.ts",
   "scripts": {
-    "clean": "rimraf dist && rimraf es"
+    "clean": "rimraf dist"
   },
   "keywords": [
-    "react-component"
+    "react-component",
+    "keep-alive"
   ],
   "author": "leomyili",
   "license": "MIT",
@@ -22,8 +23,7 @@
     "types": "dist/index.d.ts"
   },
   "files": [
-    "dist",
-    "es"
+    "dist"
   ],
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
@@ -54,22 +54,11 @@
           "react": "React",
           "react-dom": "ReactDOM"
         }
-      },
-      {
-        "file": "es/index.ts",
-        "format": "es",
-        "name": "ReactStillness",
-        "globals": {
-          "react": "React",
-          "react-dom": "ReactDOM"
-        }
       }
     ],
     "external": [
       "react",
-      "react-router-dom",
-      "invariant",
-      "hoist-non-react-statics"
+      "react-dom"
     ]
   }
 }
