--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-stillness-component": "0.4.0",
+    "react-stillness-component": "0.4.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "4.44.2"
   }
 }
