--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This package makes react-component static, with all dom operations disabled and invisible, and supports hook as well as class-component",
   "workspaces": [
     "packages/*",
-    "examples/*"
+    "examples/*",
+    "website"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
