--- a/website/package.json
+++ b/website/package.json
@@ -26,7 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-live": "^2.4.1",
-    "react-stillness-component": "0.4.1"
+    "react-stillness-component": "^0.4.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.18",
