docs: modify readme.md

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
             ${{ runner.os }}-website-
 
       - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - run: yarn build:gh
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
