--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -9,8 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
+    "react-router-domv6": "npm:react-router-dom",
     "react-scripts": "4.0.3",
-    "react-stillness-component": "0.4.1",
+    "react-stillness-component": "0.5.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
