--- a/packages/umi-plugin-stillness/package.json
+++ b/packages/umi-plugin-stillness/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-stillness",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "keep-alive for umi base on react-stillness-component",
   "main": "dist/index.js",
   "scripts": {
@@ -18,8 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "@umijs/types": "^3.5.23",
-    "react-stillness-component": "0.5.0",
-    "umi-renderer-stillness": "0.0.1"
+    "react-stillness-component": "^0.6.0",
+    "umi-renderer-stillness": "^0.1.0"
   },
   "rollup": {
     "input": "src/index.ts",
