--- a/packages/react-stillness/package.json
+++ b/packages/react-stillness/package.json
@@ -23,7 +23,8 @@
     "types": "dist/index.d.ts"
   },
   "files": [
-    "dist"
+    "dist",
+    "es"
   ],
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
@@ -49,6 +50,15 @@
       {
         "file": "dist/index.js",
         "format": "umd",
+        "name": "ReactStillness",
+        "globals": {
+          "react": "React",
+          "react-dom": "ReactDOM"
+        }
+      },
+      {
+        "file": "es/index.ts",
+        "format": "es",
         "name": "ReactStillness",
         "globals": {
           "react": "React",
