fix: 修复react类型错误以及去除esm版本
affects: react-stillness-component, umi-plugin-stillness, umi-renderer-stillness

--- a/packages/react-stillness/tsconfig.json
+++ b/packages/react-stillness/tsconfig.json
@@ -14,7 +14,6 @@
     "baseUrl": ".",
     "target": "ESNext",
     "module": "ESNext",
-    "typeRoots": ["./node_modules/@types"],
     "preserveSymlinks": true,
     "allowSyntheticDefaultImports": true,
     "strictPropertyInitialization": false
@@ -25,6 +24,8 @@
     "**/dist",
     "**/es",
     "example",
+    "**/*.test.ts",
+    "**/*.test.tsx",
     "**/*.spec.ts",
     "fixtures",
     "**/lib",
