--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "examples/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --projects ./packages/*/",
+    "test:unit": "jest --coverage --projects ./packages/*/",
     "clean": "yarn workspaces run clean",
     "dev": "rollup -c -w",
     "build": "yarn run clean && NODE_ENV=production rollup -c",
@@ -64,10 +65,14 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.1",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/invariant": "^2.2.35",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/jest": "^27.5.0",
+    "@types/react": "^17.x",
+    "@types/react-dom": "^17.x",
+    "babel-plugin-dev-expression": "^0.2.3",
     "commitizen": "^4.2.4",
     "conventional-changelog": "^3.1.24",
     "conventional-changelog-cli": "^2.1.1",
@@ -75,6 +80,7 @@
     "cz-lerna-changelog": "^2.0.3",
     "hoist-non-react-statics": "^3.3.2",
     "husky": "^7.0.0",
+    "jest": "^26.6.3",
     "lerna": "^4.0.0",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.0",
@@ -85,7 +91,12 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "standard-version": "^9.3.1",
     "tslib": "^2.3.1",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.4.3"
+  },
+  "resolutions": {
+    "@types/react": "17.x",
+    "@types/react-dom": "17.x"
   },
   "peerDependencies": {
     "react": ">=16.8"
