--- a/packages/react-stillness/package.json
+++ b/packages/react-stillness/package.json
@@ -9,7 +9,8 @@
   "main": "dist/index.js",
   "module": "es/index.ts",
   "scripts": {
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test": "jest"
   },
   "keywords": [
     "react-component",
@@ -23,8 +24,7 @@
     "types": "dist/index.d.ts"
   },
   "files": [
-    "dist",
-    "es"
+    "dist"
   ],
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
@@ -33,10 +33,11 @@
     "redux": "^4.1.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@types/jest": "^27.5.0",
+    "@types/react": "^17.x",
+    "@types/react-dom": "^17.x",
+    "react": "^17.x",
+    "react-dom": "^17.x"
   },
   "peerDependencies": {
     "@types/hoist-non-react-statics": ">= 3.3.1",
@@ -44,21 +45,16 @@
     "@types/react": ">= 16",
     "react": ">= 16.14"
   },
+  "resolutions": {
+    "@types/react": "17.x",
+    "@types/react-dom": "17.x"
+  },  
   "rollup": {
     "input": "src/index.ts",
     "output": [
       {
         "file": "dist/index.js",
         "format": "umd",
-        "name": "ReactStillness",
-        "globals": {
-          "react": "React",
-          "react-dom": "ReactDOM"
-        }
-      },
-      {
-        "file": "es/index.ts",
-        "format": "es",
         "name": "ReactStillness",
         "globals": {
           "react": "React",
