--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "build:es": "babel packages/react-stillness/src --extensions .ts,.tsx -d lib",
     "bootstrap": "npx lerna bootstrap",
     "publish:local": "yarn run build && lerna publish from-package",
-    "version:ci": "lerna version --yes --conventional-commits --create-release github --message 'chore(release): publish'"
+    "version": "lerna version --yes --conventional-commits --create-release github --message 'chore(release): publish",
+    "ci": "run-s test:unit version git-is-clean",
+    "git-is-clean": "git status && git diff-index HEAD"
   },
   "config": {
     "commitizen": {
@@ -33,6 +35,9 @@
     "*./packages/**/*.{js,ts,json,css,less,md}": [
       "prettier --write",
       "yarn lint"
+    ],
+    "*./packages/**/__tests__/**/?(*.)(spec|test).[jt]s?(x)": [
+      "yarn test"
     ]
   },
   "repository": {
@@ -66,7 +71,8 @@
     "@rollup/plugin-node-resolve": "^13.1.1",
     "@rollup/plugin-typescript": "^8.3.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "~12.1.5",
+    "@testing-library/react-hooks": "~7.0.2",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/invariant": "^2.2.35",
     "@types/jest": "^27.5.0",
@@ -83,6 +89,7 @@
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
     "lint-staged": "^11.1.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.4.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.61.1",
@@ -90,8 +97,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.6.0",
     "standard-version": "^9.3.1",
-    "tslib": "^2.3.1",
     "ts-jest": "^26.5.6",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
   "resolutions": {
