--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:es": "babel packages/react-stillness/src --extensions .ts,.tsx -d lib",
     "bootstrap": "npx lerna bootstrap",
     "publish:local": "yarn run build && lerna publish from-package",
-    "version": "lerna version --yes --conventional-commits --create-release github --message 'chore(release): publish",
+    "version": "lerna version --yes --conventional-commits --create-release github --message 'chore(release): publish'",
     "ci": "run-s test:unit version git-is-clean",
     "git-is-clean": "git status && git diff-index HEAD"
   },
