fix: nextjs example and modify umi-renderer-stillness bug
affects: react-stillness-component, umi-plugin-stillness, umi-renderer-stillness

--- a/packages/umi-plugin-stillness/package.json
+++ b/packages/umi-plugin-stillness/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "clean": "rimraf dist"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "keep-alive",
     "stillness",
