chore: change release.yml
affects: react-stillness-component

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-website-
 
-      - run: yarn install --frozen-lockfile
+      - run: yarn install
       - run: yarn build:gh
 
       - name: Deploy
