--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "next": "12.1.4",
