fix: 修复打包异常的问题
affects: react-stillness-component, umi-renderer-stillness

--- a/packages/umi-renderer-stillness/package.json
+++ b/packages/umi-renderer-stillness/package.json
@@ -38,14 +38,16 @@
         "globals": {
           "react": "React",
           "react-dom": "ReactDOM",
-          "runtime": "runtime"
+          "runtime": "runtime",
+          "react-stillness-component": "reactStillnessComponent"
         }
       }
     ],
     "external": [
       "react",
       "react-dom",
-      "@umijs/runtime"
+      "@umijs/runtime",
+      "react-stillness-component"
     ]
   }
 }
