--- a/packages/react-stillness/package.json
+++ b/packages/react-stillness/package.json
@@ -21,11 +21,12 @@
   "publishConfig": {
     "main": "dist/index.js",
     "module": "es/index.js",
-    "types": "dist/index.d.ts"
+    "types": "dist/src/index.d.ts"
   },
   "files": [
     "dist"
   ],
+  "types": "dist/src/index.d.ts",
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
     "hoist-non-react-statics": "^3.3.2",
