--- a/examples/umi/package.json
+++ b/examples/umi/package.json
@@ -27,9 +27,9 @@
     "react": "17.x",
     "react-dom": "17.x",
     "react-router-dom": "5.2.0",
-    "react-stillness-component": "0.8.1",
     "umi": "^3.5.26",
-    "umi-plugin-stillness": "0.2.1"
+    "react-stillness-component": "^0.8.2",
+    "umi-plugin-stillness": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
