--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@babel/plugin-transform-react-jsx": "^7.16.5",
     "@babel/plugin-transform-runtime": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.16.5",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
@@ -102,11 +103,8 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
-  "resolutions": {
-    "@types/react": "17.x",
-    "@types/react-dom": "17.x"
-  },
   "peerDependencies": {
-    "react": ">=16.8"
+    "react": "^16.8 || ^17.0 || ^18.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0"
   }
 }
