fix: clear redux error message
affects: react-stillness-component

ISSUES CLOSED: #43

--- a/packages/react-stillness/package.json
+++ b/packages/react-stillness/package.json
@@ -14,7 +14,8 @@
   },
   "keywords": [
     "react-component",
-    "keep-alive"
+    "keep-alive",
+    "component"
   ],
   "author": "leomyili",
   "license": "MIT",
