--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "^5.3.0",
     "react-router-domv6": "npm:react-router-dom",
     "react-scripts": "4.0.3",
-    "react-stillness-component": "0.8.3",
+    "react-stillness-component": "^0.9.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
